refactor: getConstructor() 메서드를 사용하도록 변경